// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shared HOCs Mappers - Locations Countries should return countries information 1`] = `
Object {
  "data": Object {
    "countries": Array [
      Object {
        "group": "Brazil",
        "id": "Brazil",
        "name": "Brazil",
        "total": 100,
        "value": "33.3",
      },
      Object {
        "group": "Spain",
        "id": "Spain",
        "name": "Spain",
        "total": 100,
        "value": "33.3",
      },
      Object {
        "group": "United States",
        "id": "United States",
        "name": "United States",
        "total": 100,
        "value": "33.3",
      },
    ],
    "total": 3,
  },
  "error": null,
  "loading": false,
  "refetch": undefined,
}
`;

exports[`Shared HOCs Mappers - Locations Countries should return countries information 2`] = `
Object {
  "variables": Object {
    "assetId": "formId",
    "devices": "Any",
    "location": "Any",
    "rangeEnd": null,
    "rangeKey": 0,
    "rangeStart": null,
    "title": "",
    "touchpoint": null,
  },
}
`;

exports[`Shared HOCs Mappers - Locations Countries should return countries information indepent if Brazil is selected 1`] = `
Object {
  "data": Object {
    "countries": Array [
      Object {
        "group": "Brazil",
        "id": "Brazil",
        "name": "Brazil",
        "total": 100,
        "value": "33.3",
      },
      Object {
        "group": "Spain",
        "id": "Spain",
        "name": "Spain",
        "total": 100,
        "value": "33.3",
      },
      Object {
        "group": "United States",
        "id": "United States",
        "name": "United States",
        "total": 100,
        "value": "33.3",
      },
    ],
    "total": 3,
  },
  "error": null,
  "loading": false,
  "refetch": undefined,
}
`;

exports[`Shared HOCs Mappers - Locations Countries should return countries information indepent if Brazil is selected 2`] = `
Object {
  "variables": Object {
    "assetId": "formId",
    "devices": "Any",
    "location": "Any",
    "rangeEnd": null,
    "rangeKey": 0,
    "rangeStart": null,
    "title": "",
    "touchpoint": null,
  },
}
`;

exports[`Shared HOCs Mappers - Locations should map locations information 1`] = `
Object {
  "data": Object {
    "geolocation": Array [
      Object {
        "group": "Brazil",
        "id": "Brazil",
        "name": "Brazil",
        "total": 100,
        "value": "33.3",
      },
      Object {
        "group": "Spain",
        "id": "Spain",
        "name": "Spain",
        "total": 100,
        "value": "33.3",
      },
      Object {
        "group": "United States",
        "id": "United States",
        "name": "United States",
        "total": 100,
        "value": "33.3",
      },
    ],
    "total": 3,
  },
  "error": null,
  "loading": false,
  "rangeEnd": null,
  "rangeKey": 0,
  "rangeStart": null,
  "refetch": undefined,
}
`;

exports[`Shared HOCs Mappers - Locations should map locations information 2`] = `
Object {
  "variables": Object {
    "assetId": "formId",
    "devices": "Any",
    "location": "Any",
    "rangeEnd": null,
    "rangeKey": 0,
    "rangeStart": null,
    "title": "",
    "touchpoint": null,
  },
}
`;

exports[`Shared HOCs Mappers - Locations should map locations information with region Brazil 1`] = `
Object {
  "data": Object {
    "geolocation": Array [
      Object {
        "group": "Unknown",
        "id": "Unknown",
        "name": "Unknown",
        "total": 100,
        "value": "20",
      },
      Object {
        "group": "Pernambuco",
        "id": "Pernambuco",
        "name": "Pernambuco",
        "total": 100,
        "value": "20",
      },
      Object {
        "group": "Sao Paulo",
        "id": "Sao Paulo",
        "name": "Sao Paulo",
        "total": 100,
        "value": "20",
      },
      Object {
        "group": "Parana",
        "id": "Parana",
        "name": "Parana",
        "total": 100,
        "value": "20",
      },
      Object {
        "group": "Rio Grande do Sul",
        "id": "Rio Grande do Sul",
        "name": "Rio Grande do Sul",
        "total": 100,
        "value": "20",
      },
    ],
    "total": 5,
  },
  "error": null,
  "loading": false,
  "rangeEnd": null,
  "rangeKey": 0,
  "rangeStart": null,
  "refetch": undefined,
}
`;

exports[`Shared HOCs Mappers - Locations should map locations information with region Brazil 2`] = `
Object {
  "variables": Object {
    "assetId": "formId",
    "devices": "Any",
    "location": "Brazil",
    "rangeEnd": null,
    "rangeKey": 0,
    "rangeStart": null,
    "title": "",
    "touchpoint": null,
  },
}
`;

exports[`Shared HOCs Mappers - Locations should map locations information without geolocation 1`] = `
Object {
  "data": Object {
    "geolocation": Array [],
    "total": 0,
  },
  "error": null,
  "loading": false,
  "rangeEnd": null,
  "rangeKey": 0,
  "rangeStart": null,
  "refetch": undefined,
}
`;
